# APEX_cpp

./: README.md
colab_notebook/: 01_mnisten_custom_dataset_for_tiny_dnn_.ipynb  03_tiny_dnn_custom_dataset_train_CNN.ipynb
tiny_dnn/data/: apex_test_train_images.idx3  apex_test_train_labels.idx1  apex_train_train_images.idx3  apex_train_train_labels.idx1
tiny_dnn/examples/: CMakeLists.txt
tiny_dnn/examples/mnist/: test.cp  train.cp
